syntax = "proto3";

package online_shop.management.v1;

import "github.com/lvlBA/online_shop/api/v1/pagination.proto";

option go_package = "github.com/lvlBA/online_shop/management;management";

service WarehouseService {
  rpc CreateWarehouse(CreateWarehouseRequest) returns (CreateWarehouseResponse) {}
  rpc GetWarehouse(GetWarehouseRequest) returns (GetWarehouseResponse) {}
  rpc DeleteWarehouse(DeleteWarehouseRequest) returns (DeleteWarehouseResponse) {}
  rpc ListWarehouse(ListWarehousesRequest) returns (ListWarehousesResponse) {}
}



message Warehouse {
  string id = 1;
  string name = 2;
}

message CreateWarehouseRequest {
  string name = 1;
}

message CreateWarehouseResponse {
  Warehouse warehouse = 1;
}

message GetWarehouseRequest {
  string id = 1;
}

message GetWarehouseResponse {
  Warehouse warehouse = 1;
}

message DeleteWarehouseRequest {
  string id = 1;
}

message DeleteWarehouseResponse {
}

message ListWarehousesRequest {
  online_shop.api.Pagination pagination = 1;
}

message ListWarehousesResponse {
  repeated Warehouse warehouse = 1;
}
